# distributed-systems

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.wip  build.sh
deployment/docker_base_image/: Dockerfile  README.md
deployment/simple_cluster/: docker-compose.yml
go/src/cmd/clock/: BUILD.bazel  main.go
go/src/cmd/gossip/: main.go
go/src/gossip/: BUILD.bazel  node.go
golang/src/clock/: BUILD.bazel  clock.go
golang/src/cmd/gossip/: BUILD.bazel
proto/: BUILD.bazel  clock.proto  gossip.proto
src_bazel/go/: def.bzl  repos.bzl
src_bazel/java/: def.bzl  repos.bzl
src_bazel/proto/: def.bzl  repos.bzl
