load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "gossip_proto",
    srcs = ["gossip.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "gossip_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "distributed_systems/proto",
    proto = ":gossip_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "proto",
    embed = [":gossip_go_proto"],
    importpath = "distributed_systems/proto",
    visibility = ["//visibility:public"],
)
