load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "protos",
    srcs = glob(["*.proto"]),
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "go_protos",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "distributed_systems/proto",
    proto = ":protos",
    visibility = ["//visibility:public"],
)

go_library(
    name = "proto",
    srcs = glob(["*.pb.go"]),
    visibility = ["//visibility:public"],
)
